java/java-tests/testData/codeInsight/daemonCodeAnalyzer/quickFix/sealClass/failing/DifferentPackages.java
packages p;

class Pa<caret>rent {

}